--- a/index.html
+++ b/index.html
@@ -7,35 +7,35 @@
     <p>
       <table border="1">
         <tr>
-          <td> Đến <a href="tintuc/kh.html" target="_blank"> Trang khoa học </a></td>
+          <td> Đến <a href="kh.html" target="_blank"> Trang khoa học </a></td>
           <td> </td>
         </tr>
         <tr>
-          <td> Đến <a href="D:\HVY\xh.html" target="_blank"> Trang xã hội</a> </td>
+          <td> Đến <a href="xh.html" target="_blank"> Trang xã hội</a> </td>
         </tr>
         <tr>
-          <td> Đến <a href="giaitri/nhac" target="_blank"> Trang nhạc </a> </td>
+          <td> Đến <a href="nhac" target="_blank"> Trang nhạc </a> </td>
         </tr>
         <tr> 
-        <td> Đến <a href="giaitri/game" target="_blank"> Trang game</a></td>
+        <td> Đến <a href="game" target="_blank"> Trang game</a></td>
         </tr> 
         <tr>
-          <td> Đến <a href="hinh/h1.jpg" target="_blank"> Hình 1</a></td>
+          <td> Đến <a href="h1.jpg" target="_blank"> Hình 1</a></td>
         </tr>
         <tr>
-          <td> Đến <a href="hinh/h2.jpg" target="_blank"> Hình 2</a></p>
+          <td> Đến <a href="h2.jpg" target="_blank"> Hình 2</a></p>
         </tr>
         <tr>
-          <td>Đến <a href="hinh/h3.jpg" target="_blank"> Hình 3</a></td>
+          <td>Đến <a href="h3.jpg" target="_blank"> Hình 3</a></td>
         </tr>
         <tr>
-          <td>Đến <a href="hinh/h4.jpg" target="_blank"> Hình 4</a></td>
+          <td>Đến <a href="h4.jpg" target="_blank"> Hình 4</a></td>
         </tr>
         <tr>
-          <td>Đến <a href="hinh/h5.jpg" target="_blank"> Hình 5</a></td>
+          <td>Đến <a href="h5.jpg" target="_blank"> Hình 5</a></td>
         </tr>
         <tr>
-          <td>Đến <a href="hinh/h6.jpg" target="_blank"> Hình 6</a></td></td>
+          <td>Đến <a href="h6.jpg" target="_blank"> Hình 6</a></td></td>
         </tr>
         </table>
     </p>
