--- a/kh.html
+++ b/kh.html
@@ -6,7 +6,7 @@
     <h1 align="center">Bài viết trang chủ</h1>
     <p>Quay về <a href="../index.html"> Trang chủ </a></p>
     <p align="center">
-      <img src="../hinh/h1.jpg" alt="ảnh khoa học" height="500" width="700" />
+      <img src="h1.jpg" alt="ảnh khoa học" height="500" width="700" />
     </p>
   </body>
 </html>
