--- a/cd.html
+++ b/cd.html
@@ -4,6 +4,6 @@
   </head>
   <body>
     <h1 align="center">Bài viết trang chủ</h1>
-    <p>Quay về <a href="../index.html"> Trang chủ </a></p>
+    <p>Quay về <a href="index.html"> Trang chủ </a></p>
   </body>
 </html>
