--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <td> Đến <a href="nhac" target="_blank"> Trang nhạc </a> </td>
         </tr>
         <tr> 
-        <td> Đến <a href="game" target="_blank"> Trang game</a></td>
+        <td> Đến <a href="ge.html" target="_blank"> Trang game</a></td>
         </tr> 
         <tr>
           <td> Đến <a href="h1.jpg" target="_blank"> Hình 1</a></td>
