--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <td> Đến <a href="xh.html" target="_blank"> Trang xã hội</a> </td>
         </tr>
         <tr>
-          <td> Đến <a href="nhac" target="_blank"> Trang nhạc </a> </td>
+          <td> Đến <a href="cd.html" target="_blank"> Trang nhạc </a> </td>
         </tr>
         <tr> 
         <td> Đến <a href="ge.html" target="_blank"> Trang game</a></td>
