--- a/kh.html
+++ b/kh.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1 align="center">Bài viết trang chủ</h1>
-    <p>Quay về <a href="../index.html"> Trang chủ </a></p>
+    <p>Quay về <a href="index.html"> Trang chủ </a></p>
     <p align="center">
       <img src="h1.jpg" alt="ảnh khoa học" height="500" width="700" />
     </p>
